--- a/src/Module 2/Data Aggreation using Python/q3.ipynb
+++ b/src/Module 2/Data Aggreation using Python/q3.ipynb
@@ -24,9 +24,43 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "category    A    B\n",
+      "year              \n",
+      "2021      120  150\n",
+      "2022      200  180\n",
+      "2023      130  170\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_60298/3307787769.py:13: FutureWarning: The provided callable <function sum at 0x77092c15b5b0> is currently using DataFrameGroupBy.sum. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"sum\" instead.\n",
+      "  pivot = pd.pivot_table(df, values='sales', index='year', columns='category', aggfunc=np.sum)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = {\n",
+    "    'year': [2021, 2021, 2022, 2022, 2023, 2023],\n",
+    "    'category': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
+    "    'sales': [120, 150, 200, 180, 130, 170]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "pivot = pd.pivot_table(df, values='sales', index='year', columns='category', aggfunc=np.sum)\n",
+    "\n",
+    "print(pivot)\n"
    ]
   },
   {
@@ -46,9 +80,36 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          mean       max    \n",
+      "category     A     B   A   B\n",
+      "month                       \n",
+      "Feb       50.0  60.0  50  60\n",
+      "Jan       30.0  45.0  30  45\n",
+      "Mar       55.0  70.0  55  70\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = {\n",
+    "    'month': ['Jan', 'Jan', 'Feb', 'Feb', 'Mar', 'Mar'],\n",
+    "    'category': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
+    "    'profit': [30, 45, 50, 60, 55, 70]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "pivot = pd.pivot_table(df, values='profit', index='month', columns='category', aggfunc=['mean', 'max'])\n",
+    "\n",
+    "print(pivot)\n"
    ]
   },
   {
@@ -68,10 +129,55 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "category    A    B  All\n",
+      "region                 \n",
+      "East      130  170  300\n",
+      "North     120  150  270\n",
+      "South     200  180  380\n",
+      "All       450  500  950\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_60298/1123922734.py:13: FutureWarning: The provided callable <function sum at 0x77092c15b5b0> is currently using DataFrameGroupBy.sum. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"sum\" instead.\n",
+      "  pivot = pd.pivot_table(df, values='sales', index='region', columns='category', aggfunc=np.sum, margins=True)\n",
+      "/tmp/ipykernel_60298/1123922734.py:13: FutureWarning: The provided callable <function sum at 0x77092c15b5b0> is currently using DataFrameGroupBy.sum. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"sum\" instead.\n",
+      "  pivot = pd.pivot_table(df, values='sales', index='region', columns='category', aggfunc=np.sum, margins=True)\n",
+      "/tmp/ipykernel_60298/1123922734.py:13: FutureWarning: The provided callable <function sum at 0x77092c15b5b0> is currently using DataFrameGroupBy.sum. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"sum\" instead.\n",
+      "  pivot = pd.pivot_table(df, values='sales', index='region', columns='category', aggfunc=np.sum, margins=True)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = {\n",
+    "    'region': ['North', 'North', 'South', 'South', 'East', 'East'],\n",
+    "    'category': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
+    "    'sales': [120, 150, 200, 180, 130, 170]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "pivot = pd.pivot_table(df, values='sales', index='region', columns='category', aggfunc=np.sum, margins=True)\n",
+    "\n",
+    "print(pivot)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -90,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
