--- a/src/Module 2/Data Aggreation using Python/q1.ipynb
+++ b/src/Module 2/Data Aggreation using Python/q1.ipynb
@@ -26,12 +26,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sales by Store:\n",
+      " Store\n",
+      "A    250\n",
+      "B    380\n",
+      "C    300\n",
+      "Name: Sales, dtype: int64\n",
+      "\n",
+      "Sales and Quantity by Product:\n",
+      "          Sales  Quantity\n",
+      "Product                 \n",
+      "Apple      430        43\n",
+      "Banana     500        50\n",
+      "\n",
+      "Average Sales per Store:\n",
+      " Store\n",
+      "A    125.0\n",
+      "B    190.0\n",
+      "C    150.0\n",
+      "Name: Sales, dtype: float64\n",
+      "\n",
+      "Count of entries per Store:\n",
+      " Store\n",
+      "A    2\n",
+      "B    2\n",
+      "C    2\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write your code from he\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Sample data: Sales data for different stores and products\n",
+    "data = {\n",
+    "    'Store': ['A', 'A', 'B', 'B', 'C', 'C'],\n",
+    "    'Product': ['Apple', 'Banana', 'Apple', 'Banana', 'Apple', 'Banana'],\n",
+    "    'Sales': [100, 150, 200, 180, 130, 170],\n",
+    "    'Quantity': [10, 15, 20, 18, 13, 17]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# 1. Aggregate sales by store\n",
+    "sales_by_store = df.groupby('Store')['Sales'].sum()\n",
+    "print(\"Sales by Store:\\n\", sales_by_store)\n",
+    "\n",
+    "# 2. Aggregate sales and quantity by product\n",
+    "sales_quantity_by_product = df.groupby('Product')[['Sales', 'Quantity']].sum()\n",
+    "print(\"\\nSales and Quantity by Product:\\n\", sales_quantity_by_product)\n",
+    "\n",
+    "# 3. Get the average sales per store\n",
+    "average_sales_by_store = df.groupby('Store')['Sales'].mean()\n",
+    "print(\"\\nAverage Sales per Store:\\n\", average_sales_by_store)\n",
+    "\n",
+    "# 4. Count the number of entries for each store\n",
+    "count_by_store = df.groupby('Store').size()\n",
+    "print(\"\\nCount of entries per Store:\\n\", count_by_store)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Write your code from here"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -48,12 +127,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Quantity Sold: 15.5\n",
+      "Manually Calculated Average: 15.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    'Store': ['A', 'A', 'B', 'B', 'C', 'C'],\n",
+    "    'Product': ['Apple', 'Banana', 'Apple', 'Banana', 'Apple', 'Banana'],\n",
+    "    'Sales': [100, 150, 200, 180, 130, 170],\n",
+    "    'Quantity': [10, 15, 20, 18, 13, 17]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "average_quantity = df['Quantity'].mean()\n",
+    "print(f\"Average Quantity Sold: {average_quantity}\")\n",
+    "\n",
+    "manual_mean = (10 + 15 + 20) / 3\n",
+    "print(f\"Manually Calculated Average: {manual_mean}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -72,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
