--- a/src/Module 2/Data Aggreation using Python/q2.ipynb
+++ b/src/Module 2/Data Aggreation using Python/q2.ipynb
@@ -25,9 +25,34 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Department\n",
+      "Finance    57500.0\n",
+      "HR         51000.0\n",
+      "IT         61000.0\n",
+      "Name: Salary, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    'Department': ['HR', 'HR', 'IT', 'IT', 'Finance', 'Finance'],\n",
+    "    'Employee': ['Alice', 'Bob', 'Charlie', 'David', 'Eve', 'Frank'],\n",
+    "    'Salary': [50000, 52000, 60000, 62000, 58000, 57000]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "grouped_salary = df.groupby('Department')['Salary'].mean()\n",
+    "\n",
+    "print(grouped_salary)\n"
    ]
   },
   {
@@ -47,9 +72,37 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "region  category\n",
+      "East    A           130.0\n",
+      "        B           170.0\n",
+      "North   A           120.0\n",
+      "        B           150.0\n",
+      "South   A           200.0\n",
+      "        B           180.0\n",
+      "Name: sales, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    'region': ['North', 'North', 'South', 'South', 'East', 'East'],\n",
+    "    'category': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
+    "    'sales': [120, 150, 200, 180, 130, 170]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "grouped = df.groupby(['region', 'category'])['sales'].mean()\n",
+    "\n",
+    "print(grouped)\n"
    ]
   },
   {
@@ -69,10 +122,38 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          sum  count\n",
+      "category            \n",
+      "A          38      3\n",
+      "B          55      3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    'category': ['A', 'A', 'B', 'B', 'A', 'B'],\n",
+    "    'quantity': [10, 15, 20, 18, 13, 17]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "aggregated = df.groupby('category')['quantity'].agg(['sum', 'count'])\n",
+    "\n",
+    "print(aggregated)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -91,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
