--- a/src/Module 2/Data Aggreation using Python/q4.ipynb
+++ b/src/Module 2/Data Aggreation using Python/q4.ipynb
@@ -23,12 +23,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  transaction_date  sales\n",
+      "0       2023-01-01    343\n",
+      "1       2023-01-02    242\n",
+      "2       2023-01-03    248\n",
+      "3       2023-01-04    241\n",
+      "4       2023-01-05    180\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create a sample dataset\n",
+    "data = {\n",
+    "    'transaction_date': pd.date_range(start='2023-01-01', periods=100, freq='D'),\n",
+    "    'sales': np.random.randint(100, 500, size=100)\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Save the dataset to a CSV file (you can name it as 'sales_data.csv')\n",
+    "df.to_csv('sales_data.csv', index=False)\n",
+    "\n",
+    "# Check the first few rows of the dataset\n",
+    "print(df.head())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -45,11 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('purchases_data.csv')\n",
+    "\n",
+    "total_spent = df.groupby('customer_id')['amount_spent'].sum()\n",
+    "\n",
+    "top_5_customers = total_spent.sort_values(ascending=False).head(5)\n",
+    "\n",
+    "print(top_5_customers)\n"
    ]
   },
   {
@@ -67,11 +109,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  transaction_date  sales\n",
+      "0       2023-01-01    377\n",
+      "1       2023-01-02    494\n",
+      "2       2023-01-03    334\n",
+      "3       2023-01-04    271\n",
+      "4       2023-01-05    482\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code from here"
+    "# Write your code from here\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create a sample dataset\n",
+    "data = {\n",
+    "    'transaction_date': pd.date_range(start='2023-01-01', periods=100, freq='D'),\n",
+    "    'sales': np.random.randint(100, 500, size=100)\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Save the dataset to a CSV file\n",
+    "df.to_csv('sample_retail_data.csv', index=False)\n",
+    "\n",
+    "# Check the first few rows of the dataset\n",
+    "print(df.head())\n"
    ]
   }
  ],
@@ -91,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
