--- a/src/Module 2/Hands-on Scikit-Learn Machine Learning Models Data Splitting and Data Aggregation using Python/q1.ipynb
+++ b/src/Module 2/Hands-on Scikit-Learn Machine Learning Models Data Splitting and Data Aggregation using Python/q1.ipynb
@@ -2,16 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 'creditcard.csv' not found in current directory.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Question 1: Load & Explore the Credit Card Fraud Detection Dataset\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "# Step 1: Load the dataset from a CSV (Assume you have a file named creditcard.csv ).\n",
-    "# Step 2: Split the data.\n",
-    "# Step 3: Train a Logistic Regression model.\n",
-    "# Step 4: Evaluate using ROC AUC score.\n"
+    "if 'creditcard.csv' in os.listdir():\n",
+    "    df = pd.read_csv('creditcard.csv')\n",
+    "    X = df.drop('Class', axis=1)\n",
+    "    y = df['Class']\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "    model = LogisticRegression(max_iter=1000)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_prob = model.predict_proba(X_test)[:, 1]\n",
+    "    score = roc_auc_score(y_test, y_prob)\n",
+    "    print(f\"ROC AUC Score: {score:.4f}\")\n",
+    "else:\n",
+    "    print(\"File 'creditcard.csv' not found in current directory.\")\n"
    ]
   }
  ],
@@ -31,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
