Intial commit PCA and correlation tasks

--- a/src/Module 2/Hands-on Scikit-Learn Machine Learning Models Data Splitting and Data Aggregation using Python/q3.ipynb
+++ b/src/Module 2/Hands-on Scikit-Learn Machine Learning Models Data Splitting and Data Aggregation using Python/q3.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 'house_prices.csv' not found in current directory.\n"
+     ]
+    }
+   ],
    "source": [
     "# Question 3: Advanced Model Evaluation with Feature Selection for House Prices\n",
     "\n",
@@ -55,6 +63,11 @@
     "else:\n",
     "    print(\"File 'house_prices.csv' not found in current directory.\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
