--- a/src/Module 6/Introduction to Unsupervised Learning/q9.ipynb
+++ b/src/Module 6/Introduction to Unsupervised Learning/q9.ipynb
@@ -2,12 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Frequent Itemsets:\n",
+      "Itemset: ('Beer',), Support: 0.5\n",
+      "Itemset: ('Bread',), Support: 1.0\n",
+      "Itemset: ('Butter',), Support: 0.6666666666666666\n",
+      "Itemset: ('Diapers',), Support: 0.6666666666666666\n",
+      "Itemset: ('Eggs',), Support: 0.3333333333333333\n",
+      "Itemset: ('Milk',), Support: 0.6666666666666666\n",
+      "Itemset: ('Beer', 'Bread'), Support: 0.5\n",
+      "Itemset: ('Beer', 'Diapers'), Support: 0.3333333333333333\n",
+      "Itemset: ('Beer', 'Milk'), Support: 0.3333333333333333\n",
+      "Itemset: ('Bread', 'Butter'), Support: 0.6666666666666666\n",
+      "Itemset: ('Bread', 'Diapers'), Support: 0.6666666666666666\n",
+      "Itemset: ('Bread', 'Eggs'), Support: 0.3333333333333333\n",
+      "Itemset: ('Bread', 'Milk'), Support: 0.6666666666666666\n",
+      "Itemset: ('Butter', 'Diapers'), Support: 0.3333333333333333\n",
+      "Itemset: ('Butter', 'Milk'), Support: 0.5\n",
+      "Itemset: ('Diapers', 'Eggs'), Support: 0.3333333333333333\n",
+      "Itemset: ('Diapers', 'Milk'), Support: 0.3333333333333333\n",
+      "Itemset: ('Beer', 'Bread', 'Diapers'), Support: 0.3333333333333333\n",
+      "Itemset: ('Beer', 'Bread', 'Milk'), Support: 0.3333333333333333\n",
+      "Itemset: ('Bread', 'Butter', 'Diapers'), Support: 0.3333333333333333\n",
+      "Itemset: ('Bread', 'Butter', 'Milk'), Support: 0.5\n",
+      "Itemset: ('Bread', 'Diapers', 'Eggs'), Support: 0.3333333333333333\n",
+      "Itemset: ('Bread', 'Diapers', 'Milk'), Support: 0.3333333333333333\n",
+      "\n",
+      "Association Rules:\n",
+      "Rule: ('Diapers',) -> ('Eggs',), Support: 0.3333333333333333, Confidence: 0.5, Lift: 1.5\n",
+      "Rule: ('Eggs',) -> ('Diapers',), Support: 0.3333333333333333, Confidence: 1.0, Lift: 1.5\n",
+      "Rule: ('Diapers',) -> ('Bread', 'Eggs'), Support: 0.3333333333333333, Confidence: 0.5, Lift: 1.5\n",
+      "Rule: ('Eggs',) -> ('Bread', 'Diapers'), Support: 0.3333333333333333, Confidence: 1.0, Lift: 1.5\n",
+      "Rule: ('Bread', 'Diapers') -> ('Eggs',), Support: 0.3333333333333333, Confidence: 0.5, Lift: 1.5\n",
+      "Rule: ('Bread', 'Eggs') -> ('Diapers',), Support: 0.3333333333333333, Confidence: 1.0, Lift: 1.5\n"
+     ]
+    }
+   ],
    "source": [
-    "# Question 10: Market Basket Analysis using Apriori Algorithm\n",
-    "# Description: Perform market basket analysis on a dataset of transactions using the Apriori algorithm to find frequent itemsets and association rules."
+    "import pandas as pd\n",
+    "import itertools\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "# Sample transaction data (list of transactions with items purchased)\n",
+    "dataset = [\n",
+    "    ['Milk', 'Bread', 'Butter'],\n",
+    "    ['Bread', 'Diapers', 'Beer', 'Eggs'],\n",
+    "    ['Milk', 'Bread', 'Butter', 'Diapers'],\n",
+    "    ['Bread', 'Milk', 'Diapers', 'Beer'],\n",
+    "    ['Bread', 'Butter', 'Diapers', 'Eggs'],\n",
+    "    ['Milk', 'Bread', 'Butter', 'Beer']\n",
+    "]\n",
+    "\n",
+    "# Step 1: Convert the dataset into a DataFrame (one-hot encoded)\n",
+    "def encode_transactions(dataset):\n",
+    "    all_items = sorted(set(itertools.chain(*dataset)))  # All unique items\n",
+    "    encoded_data = []\n",
+    "    for transaction in dataset:\n",
+    "        encoded_data.append([item in transaction for item in all_items])\n",
+    "    return pd.DataFrame(encoded_data, columns=all_items)\n",
+    "\n",
+    "df = encode_transactions(dataset)\n",
+    "\n",
+    "# Step 2: Generate frequent itemsets (using a simple support threshold)\n",
+    "def get_frequent_itemsets(df, min_support):\n",
+    "    itemsets_support = defaultdict(int)\n",
+    "    num_transactions = len(df)\n",
+    "\n",
+    "    # Generate itemsets of all possible sizes\n",
+    "    for size in range(1, len(df.columns) + 1):\n",
+    "        for itemset in itertools.combinations(df.columns, size):\n",
+    "            itemset_support = df[list(itemset)].all(axis=1).sum()\n",
+    "            support = itemset_support / num_transactions\n",
+    "            if support >= min_support:\n",
+    "                itemsets_support[itemset] = support\n",
+    "\n",
+    "    return itemsets_support\n",
+    "\n",
+    "# Set minimum support threshold (e.g., 0.3 means 30% of transactions)\n",
+    "min_support = 0.3\n",
+    "frequent_itemsets = get_frequent_itemsets(df, min_support)\n",
+    "\n",
+    "# Step 3: Generate association rules from frequent itemsets\n",
+    "def generate_association_rules(frequent_itemsets, min_lift):\n",
+    "    rules = []\n",
+    "    for itemset, support in frequent_itemsets.items():\n",
+    "        if len(itemset) > 1:  # Only consider itemsets with more than 1 item\n",
+    "            for subset_size in range(1, len(itemset)):\n",
+    "                for antecedent in itertools.combinations(itemset, subset_size):\n",
+    "                    consequent = set(itemset) - set(antecedent)\n",
+    "                    antecedent_support = frequent_itemsets.get(antecedent, 0)\n",
+    "                    consequent_support = frequent_itemsets.get(tuple(consequent), 0)\n",
+    "\n",
+    "                    if antecedent_support > 0 and consequent_support > 0:\n",
+    "                        confidence = support / antecedent_support\n",
+    "                        lift = confidence / consequent_support\n",
+    "\n",
+    "                        if lift >= min_lift:\n",
+    "                            rules.append({\n",
+    "                                'Antecedent': antecedent,\n",
+    "                                'Consequent': tuple(consequent),\n",
+    "                                'Support': support,\n",
+    "                                'Confidence': confidence,\n",
+    "                                'Lift': lift\n",
+    "                            })\n",
+    "    return rules\n",
+    "\n",
+    "# Set minimum lift threshold\n",
+    "min_lift = 1.2\n",
+    "rules = generate_association_rules(frequent_itemsets, min_lift)\n",
+    "\n",
+    "# Step 4: Display the results\n",
+    "print(\"\\nFrequent Itemsets:\")\n",
+    "for itemset, support in frequent_itemsets.items():\n",
+    "    print(f\"Itemset: {itemset}, Support: {support}\")\n",
+    "\n",
+    "print(\"\\nAssociation Rules:\")\n",
+    "for rule in rules:\n",
+    "    print(f\"Rule: {rule['Antecedent']} -> {rule['Consequent']}, \"\n",
+    "          f\"Support: {rule['Support']}, Confidence: {rule['Confidence']}, Lift: {rule['Lift']}\")\n"
    ]
   }
  ],
@@ -27,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
